--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     color: #fff;
-    background: url("../images/background.jpg");
+    background: url("../images/bg.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -68,11 +68,13 @@ a, a:hover {
     width: 640px;
     margin: 0 auto;
     text-align: center;
+    color: #000;
 }
 
 h1 {
+    margin-bottom: 115px;
     font-size: 45px;
-    margin: 50px 0;
+    color: #000;
 }
 
 h2 {
@@ -281,33 +283,25 @@ ul.social-icons li a.youtube:hover {
 /*-- Responsive-Code --*/
 
 @media screen and (max-width: 1920px) {
-    h1 {
-        margin: 100px 0;
-    }
+    
     .footer {
         margin: 150px 10px 20px;
     }
 }
 
 @media screen and (max-width: 1600px) {
-    h1 {
-        margin: 50px 0;
-    }
+   
     .footer {
         margin: 50px 10px 20px;
     }
 }
 
 @media screen and (max-width: 1366px) {
-    h1 {
-        margin: 50px 0;
-    }
+   
 }
 
 @media screen and (max-width: 1024px) {
-    h1 {
-        margin: 40px 0;
-    }
+   
     h2 {
         margin-left: 35px;
     }
@@ -333,7 +327,7 @@ ul.social-icons li a.youtube:hover {
 @media screen and (max-width: 768px) {
     h1 {
         font-size: 37px;
-        margin: 50px 0;
+       
     }
     h2 {
         margin-left: 50px;
@@ -352,7 +346,7 @@ ul.social-icons li a.youtube:hover {
 @media screen and (max-width: 667px) {
     h1 {
         font-size: 33px;
-        margin: 40px 0;
+       
         /*--agileits--*/
         /*--w3layouts--*/
     }
@@ -521,3 +515,16 @@ ul.social-icons li a.youtube:hover {
 }
 
 /*-- //Responsive-Code --*/
+
+.wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  
+}
+.content {
+  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
